# IC_Project3

./: README.md
Models/: portugues.fcm
Models/Order_0/: Bulgarian.fcm  Czech.fcm  Danish.fcm  Dutch.fcm  English.fcm  Estonian.fcm  Finnish.fcm  French.fcm  German.fcm  Hungarian.fcm  Italian.fcm  Latvian.fcm  Lithuanian.fcm  Polish.fcm  Portuguese.fcm  Romanian.fcm  Slovak.fcm  Slovenian.fcm  Swedish.fcm
Models/Order_1/: Bulgarian.fcm  Czech.fcm  Danish.fcm  Dutch.fcm  English.fcm  Estonian.fcm  Finnish.fcm  French.fcm  German.fcm  Hungarian.fcm  Italian.fcm  Latvian.fcm  Lithuanian.fcm  Polish.fcm  Portuguese.fcm  Romanian.fcm  Slovak.fcm  Slovenian.fcm  Swedish.fcm
Models/Order_2/: Bulgarian.fcm  Czech.fcm  Danish.fcm  Dutch.fcm  English.fcm  Estonian.fcm  Finnish.fcm  French.fcm  German.fcm  Hungarian.fcm  Italian.fcm  Latvian.fcm  Lithuanian.fcm  Polish.fcm  Portuguese.fcm  Romanian.fcm  Slovak.fcm  Slovenian.fcm  Swedish.fcm
Models/Order_3/: Bulgarian.fcm  Czech.fcm  Danish.fcm  Dutch.fcm  English.fcm  Estonian.fcm  Finnish.fcm  French.fcm  German.fcm  Hungarian.fcm  Italian.fcm  Latvian.fcm  Lithuanian.fcm  Polish.fcm  Portuguese.fcm  Romanian.fcm  Slovak.fcm  Slovenian.fcm  Swedish.fcm
PartA/: CMakeLists.txt  FCM.cpp  FCM.h  build.sh  dataOutput.txt  fcm  fcm.cpp  loadFile.cpp  output.txt  test.txt  testFCM.cpp  testLoadFile.sh
PartB1/: CMakeLists.txt  lang.cpp
PartB2/: CMakeLists.txt  findlang.cpp  order0_0.2.txt  order2_0.2.txt  order3_0.000000001.txt  results_order1.txt  results_order2.txt  results_order3.txt  testFindLang.sh
doc/: Doxyfile
(+116 files in other folders)
